Add prior locations and rotations to camera bundle.

--- a/notebooks/export_stereo_calibration.ipynb
+++ b/notebooks/export_stereo_calibration.ipynb
@@ -60,8 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mynd.api.camera import StereoCollection\n",
-    "from mynd.api.identifier import Identifier\n",
+    "from mynd.api import Identifier, StereoBundle\n",
     "\n",
     "from mynd.camera import CameraCalibration\n",
     "from mynd.io.file_database import H5Database, create_file_database, load_file_database\n",
@@ -77,18 +76,16 @@
     "from mynd.io.camera_io import write_rectification_results_to_file_database\n",
     "\n",
     "\n",
-    "def process_stereo_collection(\n",
-    "    identifier: Identifier, collection: StereoCollection\n",
-    ") -> None:\n",
-    "    \"\"\"Process a collection of stereo data.\"\"\"\n",
+    "def process_stereo_bundle(identifier: Identifier, bundle: StereoBundle) -> None:\n",
+    "    \"\"\"Process a bundle of stereo data.\"\"\"\n",
     "\n",
     "    rectification: RectificationResult = compute_stereo_rectification(\n",
-    "        collection.calibrations\n",
+    "        bundle.calibrations\n",
     "    )\n",
     "\n",
     "    logger.info(f\"Key:                 {identifier}\")\n",
-    "    logger.info(f\"Calibrations:        {len(collection.calibrations)}\")\n",
-    "    logger.info(f\"Image loaders:       {len(collection.image_loaders)}\")\n",
+    "    logger.info(f\"Calibrations:        {len(bundle.calibrations)}\")\n",
+    "    logger.info(f\"Image loaders:       {len(bundle.image_loaders)}\")\n",
     "\n",
     "    DATABASE_PATH: Path = Path(\n",
     "        f\"/data/kingston_snv_01/test/{identifier.label}_calibration.h5\"\n",
@@ -118,14 +115,15 @@
     "\n",
     "def main():\n",
     "    \"\"\"TODO\"\"\"\n",
-    "    result: Result = backend.camera_services.request_stereo_data()\n",
+    "    result: Result = backend.camera_services.request_stereo_bundles()\n",
     "\n",
-    "    data: dict[Identifier, list[StereoCollection]] = result.unwrap()\n",
+    "    data: dict[Identifier, list[StereoBundle]] = result.unwrap()\n",
     "\n",
-    "    for identifier, collections in data.items():\n",
+    "    for identifier, bundles in data.items():\n",
     "\n",
-    "        for collection in collections:\n",
-    "            process_stereo_collection(identifier, collection)\n",
+    "        for bundle in bundles:\n",
+    "            # process_stereo_bundle(identifier, bundle)\n",
+    "            pass\n",
     "\n",
     "\n",
     "# ---------- Invoke main function ----------\n",
@@ -149,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
