--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -1,26 +1,196 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "ef508239-ca3d-4228-87a9-00303a3fc140",
+   "cell_type": "markdown",
+   "id": "0c45bf13-40c2-45fb-a5ca-620fde3d3505",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'GPU'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "import onnxruntime as ort\n",
+    "#### Load project into backend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91a6cb1f-c336-4327-8d3a-45194cb25063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
     "\n",
-    "ort.get_device()"
+    "from mynd.utils.log import logger\n",
+    "from mynd.utils.result import Result\n",
+    "\n",
+    "import mynd.backends.metashape as backend\n",
+    "\n",
+    "PROJECT_PATH: Path = Path(\n",
+    "    \"/data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz\"\n",
+    ")\n",
+    "load_result: Result[str, str] = backend.load_project(PROJECT_PATH)\n",
+    "\n",
+    "if load_result.is_err():\n",
+    "    logger.error(load_result.err())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b817b634-f514-45da-a270-a51d48a92838",
+   "metadata": {},
+   "source": [
+    "#### Request camera data from backend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26f6bf3a-a9bd-4ec4-8ff2-11550e1fddaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Optional\n",
+    "\n",
+    "import Metashape as ms\n",
+    "\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "import plotly.subplots as ps\n",
+    "import polars as pl\n",
+    "\n",
+    "from mynd.api import Identifier, CameraBundle\n",
+    "\n",
+    "\n",
+    "def tabulate_aligned_cameras(bundle: CameraBundle) -> pl.DataFrame:\n",
+    "    \"\"\"Creates a data frame / table for aligned cameras.\"\"\"\n",
+    "    # key, label, x, y, z, roll, pitch, heading\n",
+    "\n",
+    "    rows: list[dict] = list()\n",
+    "    for key in bundle.aligned_locations:\n",
+    "        label: str = bundle.labels.get(key)\n",
+    "        sensor: int = bundle.sensors.get(key)\n",
+    "        image: str = bundle.images.get(key)\n",
+    "\n",
+    "        aligned_location: np.ndarray = bundle.aligned_locations.get(key)\n",
+    "        aligned_rotation: np.ndarray = bundle.aligned_rotations.get(key)\n",
+    "\n",
+    "        prior_location: np.ndarray = bundle.prior_locations.get(key)\n",
+    "        prior_rotation: np.ndarray = bundle.prior_rotations.get(key)\n",
+    "\n",
+    "        row: dict = {\n",
+    "            \"key\": key,\n",
+    "            \"label\": label,\n",
+    "            \"sensor\": sensor,\n",
+    "            \"image\": image,\n",
+    "            \"aligned_locx\": aligned_location[0],\n",
+    "            \"aligned_locy\": aligned_location[1],\n",
+    "            \"aligned_locz\": aligned_location[2],\n",
+    "            \"aligned_rotx\": aligned_rotation[0],\n",
+    "            \"aligned_roty\": aligned_rotation[1],\n",
+    "            \"aligned_rotz\": aligned_rotation[2],\n",
+    "        }\n",
+    "\n",
+    "        if not prior_location is None and not prior_rotation is None:\n",
+    "            row.update(\n",
+    "                {\n",
+    "                    \"prior_locx\": prior_location[0],\n",
+    "                    \"prior_locy\": prior_location[1],\n",
+    "                    \"prior_locz\": prior_location[2],\n",
+    "                    \"prior_rotx\": prior_rotation[0],\n",
+    "                    \"prior_roty\": prior_rotation[1],\n",
+    "                    \"prior_rotz\": prior_rotation[2],\n",
+    "                }\n",
+    "            )\n",
+    "\n",
+    "        rows.append(row)\n",
+    "\n",
+    "    return pl.DataFrame(rows)\n",
+    "\n",
+    "\n",
+    "def plot_global_references(\n",
+    "    data: pl.DataFrame,\n",
+    "    lat: str,\n",
+    "    lon: str,\n",
+    "    color: str,\n",
+    "    hover_data: Optional[list] = None,\n",
+    ") -> go.Figure:\n",
+    "    \"\"\"Plots references in a global coordinate system with map background.\"\"\"\n",
+    "    fig = px.scatter_mapbox(\n",
+    "        data,\n",
+    "        lat=lat,\n",
+    "        lon=lon,\n",
+    "        color=color,\n",
+    "        size_max=15,\n",
+    "        zoom=16,\n",
+    "        height=600,\n",
+    "        hover_data=hover_data,\n",
+    "    )\n",
+    "    fig.update_layout(height=500, width=600, mapbox_style=\"open-street-map\")\n",
+    "    return fig\n",
+    "\n",
+    "\n",
+    "def plot_local_references(\n",
+    "    data: pl.DataFrame, x: str, y: str, color: str, hover_data: Optional[list] = None\n",
+    ") -> go.Figure:\n",
+    "    \"\"\"Plots references in a local coordinate system.\"\"\"\n",
+    "    fig = px.scatter(data, x=x, y=y, color=color, hover_data=hover_data)\n",
+    "    fig.update_layout(height=800, width=1000)\n",
+    "    fig.update_yaxes(scaleanchor=\"x\", scaleratio=1)\n",
+    "    return fig\n",
+    "\n",
+    "\n",
+    "def main() -> None:\n",
+    "    \"\"\"Entrypoint.\"\"\"\n",
+    "    CameraPoseResponseData = dict[Identifier, CameraBundle]\n",
+    "\n",
+    "    camera_request_result: Result = backend.request_camera_bundles()\n",
+    "\n",
+    "    if camera_request_result.is_err():\n",
+    "        logger.error(camera_request_result.err())\n",
+    "\n",
+    "    camera_bundles: dict[Identifier, CameraBundle] = camera_request_result.ok()\n",
+    "\n",
+    "    for identifier, bundle in list(camera_bundles.items()):\n",
+    "        camera_data: pl.DataFrame = tabulate_aligned_cameras(bundle)\n",
+    "\n",
+    "        figures: dict[str, go.Figure] = {\n",
+    "            \"aligned\": plot_global_references(\n",
+    "                camera_data,\n",
+    "                lat=\"aligned_locy\",\n",
+    "                lon=\"aligned_locx\",\n",
+    "                color=\"aligned_locz\",\n",
+    "                hover_data=[\n",
+    "                    \"key\",\n",
+    "                    \"label\",\n",
+    "                    \"sensor\",\n",
+    "                    \"image\",\n",
+    "                    \"aligned_rotx\",\n",
+    "                    \"aligned_roty\",\n",
+    "                    \"aligned_rotz\",\n",
+    "                ],\n",
+    "            ),\n",
+    "            \"prior\": plot_global_references(\n",
+    "                camera_data,\n",
+    "                lat=\"prior_locy\",\n",
+    "                lon=\"prior_locx\",\n",
+    "                color=\"prior_locz\",\n",
+    "                hover_data=[\n",
+    "                    \"key\",\n",
+    "                    \"label\",\n",
+    "                    \"sensor\",\n",
+    "                    \"image\",\n",
+    "                    \"prior_rotx\",\n",
+    "                    \"prior_roty\",\n",
+    "                    \"prior_rotz\",\n",
+    "                ],\n",
+    "            ),\n",
+    "        }\n",
+    "\n",
+    "        figures.get(\"aligned\").show()\n",
+    "        figures.get(\"prior\").show()\n",
+    "\n",
+    "        break\n",
+    "\n",
+    "\n",
+    "# INVOKE MAIN\n",
+    "main()"
    ]
   }
  ],
@@ -40,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
