Rename API data collections to groups.

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -10,20 +10,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "91a6cb1f-c336-4327-8d3a-45194cb25063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/martin/.cache/pypoetry/virtualenvs/mynd-qzh2EXyG-py3.11/lib/python3.11/site-packages/kornia/feature/lightglue.py:44: FutureWarning: `torch.cuda.amp.custom_fwd(args...)` is deprecated. Please use `torch.amp.custom_fwd(args..., device_type='cuda')` instead.\n",
+      "  @torch.cuda.amp.custom_fwd(cast_inputs=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LoadProject: path = /data/kingston_snv_01/acfr_revisits_metashape_dev/r23685bc_lite_version.psz\n",
+      "loaded project in 21.9635 sec\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "\n",
     "from mynd.utils.log import logger\n",
     "from mynd.utils.result import Result\n",
     "\n",
-    "import mynd.backends.metashape as backend\n",
+    "import mynd.backend.metashape as backend\n",
     "\n",
     "PROJECT_PATH: Path = Path(\n",
-    "    \"/data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz\"\n",
+    "    \"/data/kingston_snv_01/acfr_revisits_metashape_dev/r23685bc_lite_version.psz\"\n",
     ")\n",
     "load_result: Result[str, str] = backend.load_project(PROJECT_PATH)\n",
     "\n",
@@ -41,32 +67,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "26f6bf3a-a9bd-4ec4-8ff2-11550e1fddaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-09-18 16:38:28.200\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m116\u001b[0m - \u001b[1mIndices:\u001b[0m\n",
+      "\u001b[32m2024-09-18 16:38:28.201\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m118\u001b[0m - \u001b[1m - Identifier: 0, r23685bc_20100605_021022\u001b[0m\n",
+      "\u001b[32m2024-09-18 16:38:28.201\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m118\u001b[0m - \u001b[1m - Identifier: 1, r23685bc_20120530_233021\u001b[0m\n",
+      "\u001b[32m2024-09-18 16:38:28.202\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m118\u001b[0m - \u001b[1m - Identifier: 2, r23685bc_20140616_225022\u001b[0m\n",
+      "\u001b[32m2024-09-18 16:38:28.202\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m120\u001b[0m - \u001b[1mReferences:\u001b[0m\n",
+      "\u001b[32m2024-09-18 16:38:28.202\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m122\u001b[0m - \u001b[1m - Identifier: 0, r23685bc_20100605_021022\u001b[0m\n",
+      "\u001b[32m2024-09-18 16:38:28.202\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m122\u001b[0m - \u001b[1m - Identifier: 1, r23685bc_20120530_233021\u001b[0m\n",
+      "\u001b[32m2024-09-18 16:38:28.202\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m122\u001b[0m - \u001b[1m - Identifier: 2, r23685bc_20140616_225022\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "from typing import Optional\n",
-    "\n",
-    "import Metashape as ms\n",
+    "from typing import NamedTuple, Optional\n",
     "\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "import plotly.subplots as ps\n",
     "import polars as pl\n",
     "\n",
-    "from mynd.api import Identifier, CameraBundle\n",
+    "from mynd.api import GroupID, CameraIndexGroup, CameraReferenceGroup\n",
+    "from mynd.utils.result import Ok, Err, Result\n",
     "\n",
     "\n",
-    "def tabulate_aligned_cameras(bundle: CameraBundle) -> pl.DataFrame:\n",
+    "def tabulate_camera_references(references: CameraReferenceGroup) -> pl.DataFrame:\n",
     "    \"\"\"Creates a data frame / table for aligned cameras.\"\"\"\n",
     "    # key, label, x, y, z, roll, pitch, heading\n",
     "\n",
     "    rows: list[dict] = list()\n",
     "    for key in bundle.aligned_locations:\n",
-    "        label: str = bundle.labels.get(key)\n",
-    "        sensor: int = bundle.sensors.get(key)\n",
-    "        image: str = bundle.images.get(key)\n",
     "\n",
     "        aligned_location: np.ndarray = bundle.aligned_locations.get(key)\n",
     "        aligned_rotation: np.ndarray = bundle.aligned_rotations.get(key)\n",
@@ -136,13 +173,46 @@
     "    return fig\n",
     "\n",
     "\n",
+    "def on_camera_indices(index_groups: dict[GroupID, CameraIndexGroup]) -> None:\n",
+    "    \"\"\"TODO\"\"\"\n",
+    "    raise NotImplementedError(\"on_cameras is not implemented\")\n",
+    "\n",
+    "\n",
+    "def on_camera_references(reference_groups: dict[GroupID, CameraReferenceGroup]) -> None:\n",
+    "    \"\"\"TODO\"\"\"\n",
+    "    logger.info(\"References:\")\n",
+    "    for identifier, references in reference_groups.items():\n",
+    "        logger.info(f\" - Identifier: {identifier.key}, {identifier.label}\")\n",
+    "    raise NotImplementedError(\"on_camera_references is not implemented\")\n",
+    "\n",
+    "\n",
+    "class CameraData(NamedTuple):\n",
+    "    \"\"\"Class representing a collection of camera data.\"\"\"\n",
+    "\n",
+    "    indices: CameraIndexGroup\n",
+    "    references: CameraReferenceGroup\n",
+    "\n",
+    "\n",
     "def main() -> None:\n",
     "    \"\"\"Entrypoint.\"\"\"\n",
-    "    CameraPoseResponseData = dict[Identifier, CameraBundle]\n",
     "\n",
-    "    camera_request_result: Result = backend.request_camera_bundles()\n",
+    "    # Request data from the backend\n",
+    "    index_result: Result = backend.get_camera_indices()\n",
+    "    reference_result: Result = backend.get_camera_references()\n",
     "\n",
-    "    if camera_request_result.is_err():\n",
+    "    index_groups: dict[GroupID, CameraIndexGroup] = index_result.ok()\n",
+    "    reference_groups: dict[GroupID, CameraReferenceGroup] = index_result.ok()\n",
+    "\n",
+    "    logger.info(\"Indices:\")\n",
+    "    for identifier, indices in index_groups.items():\n",
+    "        logger.info(f\" - Identifier: {identifier.key}, {identifier.label}\")\n",
+    "\n",
+    "    logger.info(\"References:\")\n",
+    "    for identifier, references in reference_groups.items():\n",
+    "        logger.info(f\" - Identifier: {identifier.key}, {identifier.label}\")\n",
+    "\n",
+    "    \"\"\"\n",
+    "    if camera_result.is_err():\n",
     "        logger.error(camera_request_result.err())\n",
     "\n",
     "    camera_bundles: dict[Identifier, CameraBundle] = camera_request_result.ok()\n",
@@ -187,6 +257,7 @@
     "        figures.get(\"prior\").show()\n",
     "\n",
     "        break\n",
+    "        \"\"\"\n",
     "\n",
     "\n",
     "# INVOKE MAIN\n",
