Rename camera index group to attribute group, and add master keys. Update camera API calls and Metashape backend to new camera group types. Add notebook for writing camera groups to HDF5 files.

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -5,259 +5,28 @@
    "id": "0c45bf13-40c2-45fb-a5ca-620fde3d3505",
    "metadata": {},
    "source": [
-    "#### Load project into backend"
+    "#### Test mynds packages in the sandbox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "91a6cb1f-c336-4327-8d3a-45194cb25063",
+   "execution_count": 2,
+   "id": "26f6bf3a-a9bd-4ec4-8ff2-11550e1fddaa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/martin/.cache/pypoetry/virtualenvs/mynd-qzh2EXyG-py3.11/lib/python3.11/site-packages/kornia/feature/lightglue.py:44: FutureWarning: `torch.cuda.amp.custom_fwd(args...)` is deprecated. Please use `torch.amp.custom_fwd(args..., device_type='cuda')` instead.\n",
-      "  @torch.cuda.amp.custom_fwd(cast_inputs=torch.float32)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LoadProject: path = /data/kingston_snv_01/acfr_revisits_metashape_dev/r23685bc_lite_version.psz\n",
-      "loaded project in 21.9635 sec\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from mynd.utils.log import logger\n",
-    "from mynd.utils.result import Result\n",
-    "\n",
     "import mynd.backend.metashape as backend\n",
     "\n",
-    "PROJECT_PATH: Path = Path(\n",
-    "    \"/data/kingston_snv_01/acfr_revisits_metashape_dev/r23685bc_lite_version.psz\"\n",
-    ")\n",
-    "load_result: Result[str, str] = backend.load_project(PROJECT_PATH)\n",
-    "\n",
-    "if load_result.is_err():\n",
-    "    logger.error(load_result.err())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b817b634-f514-45da-a270-a51d48a92838",
-   "metadata": {},
-   "source": [
-    "#### Request camera data from backend"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "26f6bf3a-a9bd-4ec4-8ff2-11550e1fddaa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2024-09-18 16:38:28.200\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m116\u001b[0m - \u001b[1mIndices:\u001b[0m\n",
-      "\u001b[32m2024-09-18 16:38:28.201\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m118\u001b[0m - \u001b[1m - Identifier: 0, r23685bc_20100605_021022\u001b[0m\n",
-      "\u001b[32m2024-09-18 16:38:28.201\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m118\u001b[0m - \u001b[1m - Identifier: 1, r23685bc_20120530_233021\u001b[0m\n",
-      "\u001b[32m2024-09-18 16:38:28.202\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m118\u001b[0m - \u001b[1m - Identifier: 2, r23685bc_20140616_225022\u001b[0m\n",
-      "\u001b[32m2024-09-18 16:38:28.202\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m120\u001b[0m - \u001b[1mReferences:\u001b[0m\n",
-      "\u001b[32m2024-09-18 16:38:28.202\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m122\u001b[0m - \u001b[1m - Identifier: 0, r23685bc_20100605_021022\u001b[0m\n",
-      "\u001b[32m2024-09-18 16:38:28.202\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m122\u001b[0m - \u001b[1m - Identifier: 1, r23685bc_20120530_233021\u001b[0m\n",
-      "\u001b[32m2024-09-18 16:38:28.202\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m122\u001b[0m - \u001b[1m - Identifier: 2, r23685bc_20140616_225022\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "from typing import NamedTuple, Optional\n",
-    "\n",
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
-    "import plotly.subplots as ps\n",
-    "import polars as pl\n",
-    "\n",
-    "from mynd.api import GroupID, CameraIndexGroup, CameraReferenceGroup\n",
+    "from mynd.utils.log import logger\n",
     "from mynd.utils.result import Ok, Err, Result\n",
     "\n",
     "\n",
-    "def tabulate_camera_references(references: CameraReferenceGroup) -> pl.DataFrame:\n",
-    "    \"\"\"Creates a data frame / table for aligned cameras.\"\"\"\n",
-    "    # key, label, x, y, z, roll, pitch, heading\n",
-    "\n",
-    "    rows: list[dict] = list()\n",
-    "    for key in bundle.aligned_locations:\n",
-    "\n",
-    "        aligned_location: np.ndarray = bundle.aligned_locations.get(key)\n",
-    "        aligned_rotation: np.ndarray = bundle.aligned_rotations.get(key)\n",
-    "\n",
-    "        prior_location: np.ndarray = bundle.prior_locations.get(key)\n",
-    "        prior_rotation: np.ndarray = bundle.prior_rotations.get(key)\n",
-    "\n",
-    "        row: dict = {\n",
-    "            \"key\": key,\n",
-    "            \"label\": label,\n",
-    "            \"sensor\": sensor,\n",
-    "            \"image\": image,\n",
-    "            \"aligned_locx\": aligned_location[0],\n",
-    "            \"aligned_locy\": aligned_location[1],\n",
-    "            \"aligned_locz\": aligned_location[2],\n",
-    "            \"aligned_rotx\": aligned_rotation[0],\n",
-    "            \"aligned_roty\": aligned_rotation[1],\n",
-    "            \"aligned_rotz\": aligned_rotation[2],\n",
-    "        }\n",
-    "\n",
-    "        if not prior_location is None and not prior_rotation is None:\n",
-    "            row.update(\n",
-    "                {\n",
-    "                    \"prior_locx\": prior_location[0],\n",
-    "                    \"prior_locy\": prior_location[1],\n",
-    "                    \"prior_locz\": prior_location[2],\n",
-    "                    \"prior_rotx\": prior_rotation[0],\n",
-    "                    \"prior_roty\": prior_rotation[1],\n",
-    "                    \"prior_rotz\": prior_rotation[2],\n",
-    "                }\n",
-    "            )\n",
-    "\n",
-    "        rows.append(row)\n",
-    "\n",
-    "    return pl.DataFrame(rows)\n",
-    "\n",
-    "\n",
-    "def plot_global_references(\n",
-    "    data: pl.DataFrame,\n",
-    "    lat: str,\n",
-    "    lon: str,\n",
-    "    color: str,\n",
-    "    hover_data: Optional[list] = None,\n",
-    ") -> go.Figure:\n",
-    "    \"\"\"Plots references in a global coordinate system with map background.\"\"\"\n",
-    "    fig = px.scatter_mapbox(\n",
-    "        data,\n",
-    "        lat=lat,\n",
-    "        lon=lon,\n",
-    "        color=color,\n",
-    "        size_max=15,\n",
-    "        zoom=16,\n",
-    "        height=600,\n",
-    "        hover_data=hover_data,\n",
-    "    )\n",
-    "    fig.update_layout(height=500, width=600, mapbox_style=\"open-street-map\")\n",
-    "    return fig\n",
-    "\n",
-    "\n",
-    "def plot_local_references(\n",
-    "    data: pl.DataFrame, x: str, y: str, color: str, hover_data: Optional[list] = None\n",
-    ") -> go.Figure:\n",
-    "    \"\"\"Plots references in a local coordinate system.\"\"\"\n",
-    "    fig = px.scatter(data, x=x, y=y, color=color, hover_data=hover_data)\n",
-    "    fig.update_layout(height=800, width=1000)\n",
-    "    fig.update_yaxes(scaleanchor=\"x\", scaleratio=1)\n",
-    "    return fig\n",
-    "\n",
-    "\n",
-    "def on_camera_indices(index_groups: dict[GroupID, CameraIndexGroup]) -> None:\n",
-    "    \"\"\"TODO\"\"\"\n",
-    "    raise NotImplementedError(\"on_cameras is not implemented\")\n",
-    "\n",
-    "\n",
-    "def on_camera_references(reference_groups: dict[GroupID, CameraReferenceGroup]) -> None:\n",
-    "    \"\"\"TODO\"\"\"\n",
-    "    logger.info(\"References:\")\n",
-    "    for identifier, references in reference_groups.items():\n",
-    "        logger.info(f\" - Identifier: {identifier.key}, {identifier.label}\")\n",
-    "    raise NotImplementedError(\"on_camera_references is not implemented\")\n",
-    "\n",
-    "\n",
-    "class CameraData(NamedTuple):\n",
-    "    \"\"\"Class representing a collection of camera data.\"\"\"\n",
-    "\n",
-    "    indices: CameraIndexGroup\n",
-    "    references: CameraReferenceGroup\n",
-    "\n",
-    "\n",
     "def main() -> None:\n",
-    "    \"\"\"Entrypoint.\"\"\"\n",
+    "    \"\"\"Main entrypoint.\"\"\"\n",
     "\n",
-    "    # Request data from the backend\n",
-    "    index_result: Result = backend.get_camera_indices()\n",
-    "    reference_result: Result = backend.get_camera_references()\n",
-    "\n",
-    "    index_groups: dict[GroupID, CameraIndexGroup] = index_result.ok()\n",
-    "    reference_groups: dict[GroupID, CameraReferenceGroup] = index_result.ok()\n",
-    "\n",
-    "    logger.info(\"Indices:\")\n",
-    "    for identifier, indices in index_groups.items():\n",
-    "        logger.info(f\" - Identifier: {identifier.key}, {identifier.label}\")\n",
-    "\n",
-    "    logger.info(\"References:\")\n",
-    "    for identifier, references in reference_groups.items():\n",
-    "        logger.info(f\" - Identifier: {identifier.key}, {identifier.label}\")\n",
-    "\n",
-    "    \"\"\"\n",
-    "    if camera_result.is_err():\n",
-    "        logger.error(camera_request_result.err())\n",
-    "\n",
-    "    camera_bundles: dict[Identifier, CameraBundle] = camera_request_result.ok()\n",
-    "\n",
-    "    for identifier, bundle in list(camera_bundles.items()):\n",
-    "        camera_data: pl.DataFrame = tabulate_aligned_cameras(bundle)\n",
-    "\n",
-    "        figures: dict[str, go.Figure] = {\n",
-    "            \"aligned\": plot_global_references(\n",
-    "                camera_data,\n",
-    "                lat=\"aligned_locy\",\n",
-    "                lon=\"aligned_locx\",\n",
-    "                color=\"aligned_locz\",\n",
-    "                hover_data=[\n",
-    "                    \"key\",\n",
-    "                    \"label\",\n",
-    "                    \"sensor\",\n",
-    "                    \"image\",\n",
-    "                    \"aligned_rotx\",\n",
-    "                    \"aligned_roty\",\n",
-    "                    \"aligned_rotz\",\n",
-    "                ],\n",
-    "            ),\n",
-    "            \"prior\": plot_global_references(\n",
-    "                camera_data,\n",
-    "                lat=\"prior_locy\",\n",
-    "                lon=\"prior_locx\",\n",
-    "                color=\"prior_locz\",\n",
-    "                hover_data=[\n",
-    "                    \"key\",\n",
-    "                    \"label\",\n",
-    "                    \"sensor\",\n",
-    "                    \"image\",\n",
-    "                    \"prior_rotx\",\n",
-    "                    \"prior_roty\",\n",
-    "                    \"prior_rotz\",\n",
-    "                ],\n",
-    "            ),\n",
-    "        }\n",
-    "\n",
-    "        figures.get(\"aligned\").show()\n",
-    "        figures.get(\"prior\").show()\n",
-    "\n",
-    "        break\n",
-    "        \"\"\"\n",
+    "    # TODO: Write your code here\n",
     "\n",
     "\n",
     "# INVOKE MAIN\n",
