Refactor image database insertion task. Update notebook to new task interface.

--- a/notebooks/insert_images_into_database.ipynb
+++ b/notebooks/insert_images_into_database.ipynb
@@ -10,149 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6d66e04c-0d97-481e-b428-1264e47aebbe",
+   "execution_count": null,
+   "id": "29cd8974-1f41-40e8-b4b4-11e4dc8950ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/martin/.cache/pypoetry/virtualenvs/mynd-qzh2EXyG-py3.11/lib/python3.11/site-packages/kornia/feature/lightglue.py:44: FutureWarning: `torch.cuda.amp.custom_fwd(args...)` is deprecated. Please use `torch.amp.custom_fwd(args..., device_type='cuda')` instead.\n",
-      "  @torch.cuda.amp.custom_fwd(cast_inputs=torch.float32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from collections.abc import Iterable\n",
     "from pathlib import Path\n",
-    "from typing import NamedTuple, TypeVar\n",
-    "\n",
-    "import h5py\n",
-    "import numpy as np\n",
-    "import tqdm\n",
     "\n",
     "from mynd.database import H5Database, create_file_database, load_file_database\n",
     "from mynd.camera import ImageBundle, ImageBundleLoader\n",
     "\n",
-    "from mynd.tasks.image_export import CreateDatabaseTask\n",
+    "# Task specific functionality - task factories and facade\n",
     "from mynd.tasks.image_export import generate_image_bundle_loaders\n",
-    "\n",
-    "# Validation\n",
-    "from mynd.tasks.image_export import (\n",
-    "    ImageBundleTemplate,\n",
-    "    create_image_bundle_template,\n",
-    "    check_image_bundle_fits_template,\n",
-    ")\n",
-    "\n",
-    "# Memory allocation and loading\n",
-    "from mynd.tasks.image_export import (\n",
-    "    ImageBundleBuffers,\n",
-    "    load_bundle_buffers,\n",
-    "    allocate_datasets,\n",
-    ")\n",
+    "from mynd.tasks.image_export import CreateDatabaseTask, insert_image_bundles_into\n",
     "\n",
     "from mynd.utils.log import logger\n",
     "from mynd.utils.result import Ok, Err, Result\n",
     "\n",
     "\n",
-    "T: TypeVar = TypeVar(\"T\")\n",
-    "\n",
-    "\n",
-    "def generate_chunks(items: Iterable[T], chunk_size: int) -> Iterable[list[T]]:\n",
-    "    \"\"\"Generate chunks of the items with the maximum size of chunk size.\"\"\"\n",
-    "    for index in range(0, len(items), chunk_size):\n",
-    "        yield items[index : index + chunk_size]\n",
-    "\n",
-    "\n",
-    "def insert_images_into_database(\n",
-    "    group: h5py.Group,\n",
-    "    bundle_loaders: Iterable[ImageBundleLoader],\n",
-    "    chunk_size: int,\n",
-    ") -> Result[None, str]:\n",
-    "    \"\"\"Builds a frame database based on the given configuration.\"\"\"\n",
-    "\n",
-    "    bundle_count: int = len(bundle_loaders)\n",
-    "\n",
-    "    if bundle_count == 0:\n",
-    "        return Err(\"no bundle loaders provided for database insert\")\n",
-    "\n",
-    "    # Create template to validate the shape, format, and dtype\n",
-    "    template: ImageBundleTemplate = create_image_bundle_template(bundle_loaders[0]())\n",
-    "\n",
-    "    # TODO: Return datasets from here\n",
-    "    allocate_datasets(group, template, bundle_count)\n",
-    "\n",
-    "    running_index: int = 0\n",
-    "    for loaders in tqdm.tqdm(\n",
-    "        generate_chunks(bundle_loaders, chunk_size), desc=\"Loading bundles...\"\n",
-    "    ):\n",
-    "\n",
-    "        chunk_count: int = len(loaders)\n",
-    "\n",
-    "        # TODO: Load images to buffer\n",
-    "        load_buffer_result: Result[ImageBundleBuffers, str] = load_bundle_buffers(\n",
-    "            template, loaders\n",
-    "        )\n",
-    "\n",
-    "        if load_buffer_result.is_err():\n",
-    "            return load_buffer_result\n",
-    "\n",
-    "        buffers: ImageBundleBuffers = load_buffer_result.ok()\n",
-    "\n",
-    "        # TODO: Load buffer to dataset\n",
-    "        group.get(\"labels\")[\n",
-    "            running_index : running_index + chunk_count\n",
-    "        ] = buffers.labels\n",
-    "        group.get(\"intensities\")[\n",
-    "            running_index : running_index + chunk_count\n",
-    "        ] = buffers.intensities\n",
-    "        group.get(\"ranges\")[\n",
-    "            running_index : running_index + chunk_count\n",
-    "        ] = buffers.ranges\n",
-    "        group.get(\"normals\")[\n",
-    "            running_index : running_index + chunk_count\n",
-    "        ] = buffers.normals\n",
-    "\n",
-    "        running_index += len(loaders)\n",
-    "\n",
-    "    raise NotImplementedError(\"insert_images_into_database is not implemented\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "29cd8974-1f41-40e8-b4b4-11e4dc8950ba",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnwrapError",
-     "evalue": "Called `Result.unwrap()` on an `Err` value: 'group is already in database'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnwrapError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 73\u001b[0m\n\u001b[1;32m     69\u001b[0m     database\u001b[38;5;241m.\u001b[39mvisit(logger\u001b[38;5;241m.\u001b[39minfo)\n\u001b[1;32m     72\u001b[0m \u001b[38;5;66;03m# ---------- Run main function ----------\u001b[39;00m\n\u001b[0;32m---> 73\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[2], line 57\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m     56\u001b[0m database: H5Database \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m.\u001b[39mok()\n\u001b[0;32m---> 57\u001b[0m group: H5Database\u001b[38;5;241m.\u001b[39mGroup \u001b[38;5;241m=\u001b[39m \u001b[43mdatabase\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreate_group\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/r23685bc_20100605_021022/images\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43munwrap\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;66;03m# TODO: Insert image bundle into database\u001b[39;00m\n\u001b[1;32m     60\u001b[0m insertion_result: Result[\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m=\u001b[39m insert_images_into_database(\n\u001b[1;32m     61\u001b[0m     group\u001b[38;5;241m=\u001b[39mgroup,\n\u001b[1;32m     62\u001b[0m     bundle_loaders\u001b[38;5;241m=\u001b[39mbundle_loaders[:LOADER_COUNT],\n\u001b[1;32m     63\u001b[0m     chunk_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m,\n\u001b[1;32m     64\u001b[0m )\n",
-      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/mynd-qzh2EXyG-py3.11/lib/python3.11/site-packages/result/result.py:319\u001b[0m, in \u001b[0;36mErr.unwrap\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_value, \u001b[38;5;167;01mBaseException\u001b[39;00m):\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exc \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mself\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_value\u001b[39;00m\n\u001b[0;32m--> 319\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exc\n",
-      "\u001b[0;31mUnwrapError\u001b[0m: Called `Result.unwrap()` on an `Err` value: 'group is already in database'"
-     ]
-    }
-   ],
-   "source": [
     "def main() -> None:\n",
     "    \"\"\"Main function.\"\"\"\n",
-    "\n",
-    "    LOADER_COUNT: int = -1\n",
     "\n",
     "    SSD_01: Path = Path(\"/data/kingston_snv_01\")\n",
     "    SSD_02: Path = Path(\"/data/kingston_snv_02\")\n",
@@ -193,7 +70,7 @@
     "\n",
     "    # Create / load file database\n",
     "    if not config.output_path.exists():\n",
-    "        result: Result[h5py.File, str] = create_file_database(config.output_path)\n",
+    "        result: Result[H5Database, str] = create_file_database(config.output_path)\n",
     "    else:\n",
     "        result: Result[H5Database, str] = load_file_database(config.output_path)\n",
     "\n",
@@ -203,13 +80,12 @@
     "\n",
     "    database: H5Database = result.ok()\n",
     "    group: H5Database.Group = database.create_group(\n",
-    "        \"/r23685bc_20100605_021022/images\"\n",
+    "        \"/r23685bc_20100605_021022/left_images\"\n",
     "    ).unwrap()\n",
     "\n",
-    "    # TODO: Insert image bundle into database\n",
-    "    insertion_result: Result[None, str] = insert_images_into_database(\n",
+    "    insertion_result: Result[None, str] = insert_image_bundles_into(\n",
     "        group=group,\n",
-    "        bundle_loaders=bundle_loaders[:LOADER_COUNT],\n",
+    "        bundle_loaders=bundle_loaders,\n",
     "        chunk_size=100,\n",
     "    )\n",
     "\n",
