Add camera export handler. Add HDF writers for camera attribute and references. Update black settings and linter code.

--- a/notebooks/dev_registration.ipynb
+++ b/notebooks/dev_registration.ipynb
@@ -106,7 +106,8 @@
     "}\n",
     "\n",
     "loaders: dict = {\n",
-    "    key: create_point_cloud_loader(path) for key, path in point_cloud_files.items()\n",
+    "    key: create_point_cloud_loader(path)\n",
+    "    for key, path in point_cloud_files.items()\n",
     "}\n",
     "\n",
     "for key, loader in loaders.items():\n",
@@ -134,10 +135,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def log_registration(source: int, target: int, result: RegistrationResult) -> None:\n",
+    "def log_registration(\n",
+    "    source: int, target: int, result: RegistrationResult\n",
+    ") -> None:\n",
     "    \"\"\"TODO\"\"\"\n",
     "\n",
-    "    scale, rotation, translation = decompose_transformation(result.transformation)\n",
+    "    scale, rotation, translation = decompose_transformation(\n",
+    "        result.transformation\n",
+    "    )\n",
     "\n",
     "    logger.info(\"\")\n",
     "    logger.info(f\"Source:       {source}\")\n",
@@ -180,7 +185,9 @@
     "    module_type: str = module_config[\"type\"]\n",
     "\n",
     "    preprocessors = [\n",
-    "        build_point_cloud_processor(model[\"method\"], model[\"parameters\"]).unwrap()\n",
+    "        build_point_cloud_processor(\n",
+    "            model[\"method\"], model[\"parameters\"]\n",
+    "        ).unwrap()\n",
     "        for model in module_config[\"preprocessors\"]\n",
     "    ]\n",
     "\n",
@@ -275,8 +282,12 @@
     "\n",
     "visualize: bool = True\n",
     "\n",
-    "source_down: PointCloud = downsample_point_cloud(cloud=source_cloud, spacing=0.10)\n",
-    "target_down: PointCloud = downsample_point_cloud(cloud=target_cloud, spacing=0.10)"
+    "source_down: PointCloud = downsample_point_cloud(\n",
+    "    cloud=source_cloud, spacing=0.10\n",
+    ")\n",
+    "target_down: PointCloud = downsample_point_cloud(\n",
+    "    cloud=target_cloud, spacing=0.10\n",
+    ")"
    ]
   },
   {
@@ -446,7 +457,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "initial_graph: reg.PoseGraph = build_pose_graph(result_storage[\"incremental_coarse\"])\n",
+    "initial_graph: reg.PoseGraph = build_pose_graph(\n",
+    "    result_storage[\"incremental_coarse\"]\n",
+    ")\n",
     "\n",
     "with util.VerbosityContextManager(util.VerbosityLevel.Debug) as cm:\n",
     "    optimized_graph: reg.PoseGraph = optimize_pose_graph(\n",
