--- a/notebooks/export_stereo_geometry.ipynb
+++ b/notebooks/export_stereo_geometry.ipynb
@@ -124,8 +124,8 @@
     "            config: ExportStereoTask.Config = prepare_task_config(\n",
     "                identifier, collection\n",
     "            )\n",
-    "            result: Result[ExportStereoTask.Result, str] = invoke_stereo_export_task(\n",
-    "                config\n",
+    "            result: Result[ExportStereoTask.Result, str] = (\n",
+    "                invoke_stereo_export_task(config)\n",
     "            )\n",
     "\n",
     "            if result.is_err():\n",
