Update backend camera services to target specific camera groups.

--- a/notebooks/export_stereo_geometry.ipynb
+++ b/notebooks/export_stereo_geometry.ipynb
@@ -60,22 +60,20 @@
    "source": [
     "import os\n",
     "\n",
-    "from mynd.api.identifier import Identifier\n",
-    "from mynd.api.camera import StereoCollection\n",
-    "\n",
-    "from mynd.backends import metashape as backend\n",
-    "\n",
+    "from mynd.collections import CameraGroupIdentifier, StereoCameraGroup\n",
+    "from mynd.backend import metashape as backend\n",
     "from mynd.geometry import load_hitnet\n",
-    "from mynd.runtime import Environment, load_environment\n",
+    "from mynd.utils.environment import Environment, load_environment\n",
     "\n",
     "from mynd.tasks.export_stereo_geometry import (\n",
     "    ExportStereoTask,\n",
     "    invoke_stereo_export_task,\n",
     ")\n",
     "\n",
+    "GroupID = CameraGroup.Identifier\n",
     "\n",
     "def prepare_task_config(\n",
-    "    identifier: Identifier, collection: StereoCollection\n",
+    "    identifier: GroupID, stereo_camera: StereoCameraGroup\n",
     ") -> ExportStereoTask.Config:\n",
     "    \"\"\"Prepares a stereo export task config by creating setting up paths, creating directories,\n",
     "    and loading a disparity model.\"\"\"\n",
@@ -95,8 +93,8 @@
     "        range_directory=RANGE_DIRECTORY / Path(f\"{identifier.label}_ranges\"),\n",
     "        normal_directory=NORMAL_DIRECTORY / Path(f\"{identifier.label}_normals\"),\n",
     "        model=model,\n",
-    "        calibrations=collection.calibrations,\n",
-    "        image_loaders=collection.image_loaders,\n",
+    "        calibrations=stereo_camera.calibrations,\n",
+    "        image_loaders=stereo_camera.image_loaders,\n",
     "    )\n",
     "\n",
     "    # Create export directories if they do not exist\n",
@@ -110,26 +108,24 @@
     "\n",
     "def main():\n",
     "    \"\"\"Main function.\"\"\"\n",
-    "    result: Result = backend.camera_services.request_stereo_data()\n",
     "\n",
-    "    if result.is_err():\n",
-    "        logger.error(result.err())\n",
+    "    # Since the backend already has a loaded project at this point, \n",
+    "    # we can start extracting data from it\n",
+    "    identifiers: list[GroupID] = backend.get_group_identifiers()\n",
     "\n",
-    "    response_data: dict[Identifier, list[StereoCollection]] = result.ok()\n",
-    "\n",
-    "    for identifier, collections in response_data.items():\n",
-    "\n",
-    "        for collection in collections:\n",
-    "\n",
-    "            config: ExportStereoTask.Config = prepare_task_config(\n",
-    "                identifier, collection\n",
-    "            )\n",
-    "            result: Result[ExportStereoTask.Result, str] = (\n",
-    "                invoke_stereo_export_task(config)\n",
-    "            )\n",
-    "\n",
-    "            if result.is_err():\n",
-    "                logger.error(result.err())\n",
+    "    target: GroupID = identifiers[0]\n",
+    "    \n",
+    "    match backend.get_stereo_cameras(target)\n",
+    "        case Ok(stereo_camera_groups):\n",
+    "            for stereo_cameras in stereo_camera_groups:\n",
+    "                config: ExportStereoTask.Config = prepare_task_config(\n",
+    "                    target, stereo_cameras\n",
+    "                )\n",
+    "                result: Result[ExportStereoTask.Result, str] = (\n",
+    "                    invoke_stereo_export_task(config)\n",
+    "                )\n",
+    "        case Err(message):\n",
+    "            logger.error(message)\n",
     "\n",
     "\n",
     "# ---------- Invoke main function ----------\n",
